# mechax_cv_trajectory

./: .gitignore  .gitmodules  Readme.md  frames_2024-04-21_14.31.43.gv  frames_2024-05-08_00.48.43.gv  mechax_cv_trajectory.sh  start.sh
.cache/clangd/index/: CameraApi.h.1B131564D0BEACCC.idx  CameraApi.h.9AE27FDD809BFAB8.idx  CameraApi.h.D1D28D57FDA6D99D.idx  CameraDefine.h.18876D3BE8DBB708.idx  CameraDefine.h.3266CF03699E6DEC.idx  CameraDefine.h.ED84263134DB6218.idx  CameraStatus.h.243FBC3DE3FF5281.idx  CameraStatus.h.386E2853C818E77D.idx  CameraStatus.h.ABDDD1617AD3A590.idx  armor.hpp.220AE1970900B812.idx  armor.hpp.9294075164E5DBA9.idx  armor.hpp.F1DF2821CFBF57E3.idx  armor__struct.hpp.4503B0F19E26E472.idx  armor__struct.hpp.7E6D7BEB0D1AE986.idx  armor__struct.hpp.8E676310833E6441.idx  armor__traits.hpp.93FE2C3C3B4CFB3D.idx  armor__traits.hpp.C8144F017A7EC739.idx  armor__traits.hpp.F61DEBCFFCE4917A.idx  armors.hpp.27CE1950855773E1.idx  armors.hpp.CF4E726FF6C1DF74.idx  armors.hpp.EE6683D1DA60035D.idx  armors__builder.hpp.239408F1A615F66D.idx  armors__builder.hpp.76ADD4960E7E8660.idx  armors__builder.hpp.E94A9509D71F86B4.idx  armors__struct.hpp.621FF8F7D6E93C9D.idx  armors__struct.hpp.653C54D7EA9A1787.idx  armors__struct.hpp.932D23B9A3E13D08.idx  armors__traits.hpp.41AE58CBA938DE35.idx  armors__traits.hpp.95A72BE0C1C5BBA2.idx  armors__traits.hpp.DAA46C4FB7E1B70C.idx  bias.hpp.CCF1FC45B0C11CA1.idx  bias__builder.hpp.7556B0AF54029F73.idx  bias__struct.hpp.6CB147C239CF3E06.idx  bias__traits.hpp.70D572BF9F96F374.idx  crc.cpp.1D330771289DEF1E.idx  crc.cpp.3614E50316FDB811.idx  crc.cpp.D97F4938B633CB13.idx  crc.hpp.9AD94611A2BB9F12.idx  crc.hpp.B8A692927CD03BCE.idx  crc.hpp.C4D3E2863CAD3B84.idx  (+148 more)
Camera/Data/: 043051920303.mvdat
Camera/log/: error_20240225-172133.108371  error_20240225-172133.3733  error_20240225-172426.124188  error_20240225-172448.140290  error_20240225-172449.140246  error_20240225-172711.149569  error_20240225-172711.155215  error_20240225-175300.2871  error_20240225-175637.173927  error_20240225-181853.189680  error_20240225-181903.189974  error_20240225-181915.190275  error_20240225-184203.211901  error_20240225-184210.212200  error_20240225-184219.212461  error_20240225-184350.213596  error_20240225-190038.228559  error_20240225-190129.229274  error_20240225-190400.231511  error_20240225-190433.232042  error_20240225-190447.232385  error_20240225-190458.232712  error_20240225-190735.234838  error_20240225-190813.235415  error_20240225-190823.235722  error_20240225-190833.236030  error_20240225-191000.237350  error_20240225-191008.237623  error_20240225-191024.238109  error_20240225-191648.242400  error_20240225-191704.242739  error_20240225-191756.243861  error_20240225-191809.244218  error_20240225-191819.244501  error_20240225-191915.245248  error_20240225-194138.8299  warning_20240226-220510.169292
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
mechax_trajectory/include/: trajectoryer.hpp
mechax_trajectory/src/: trajectoryer.cpp
rm_auto_aim/auto_aim_interfaces/: CMakeLists.txt
rm_auto_aim/auto_aim_interfaces/msg/: Serial.msg
rm_serial_driver/config/: serial_driver.yaml
rm_serial_driver/include/rm_serial_driver/: packet.hpp
rm_serial_driver/src/: rm_serial_driver.cpp
rm_vision/rm_vision_bringup/config/: camera_info.yaml  node_params.yaml
rm_vision/rm_vision_bringup/launch/: addMVlaunch.py  vision_bringup.launch.py
src/Video_save/: CMakeLists.txt  package.xml
src/Video_save/include/video_save/: video_save.hpp
src/Video_save/launch/: video_save_launch.py
src/Video_save/src/: video_save.cpp
src/mechax_trajectory/: CMakeLists.txt  README.md  package.xml
src/mechax_trajectory/include/: trajectoryer.hpp
src/mechax_trajectory/src/: trajectoryer.cpp
src/outpost/: CMakeLists.txt  package.xml
src/outpost/include/: outpost.hpp
src/outpost/src/: outpost.cpp
src/rm_assist_detector/assist_armor_detector/: CMakeLists.txt
src/rm_assist_detector/assist_armor_tracker/: CMakeLists.txt
src/rm_assist_detector/rm_assist_detector/: CMakeLists.txt  package.xml
src/rm_auto_aim/auto_aim_interfaces/: CMakeLists.txt
src/rm_back_assist_detector/back_assist_armor_detector/: CMakeLists.txt  package.xml
src/rm_back_assist_detector/back_assist_armor_tracker/: CMakeLists.txt  package.xml
src/rm_back_assist_detector/rm_back_assist_detector/: CMakeLists.txt  package.xml
src/rm_front_assist_detector/assist_armor_tracker/: package.xml
src/rm_front_assist_detector/frontassist_armor_detector/: package.xml
src/rm_gimbal_description/urdf/: rm_gimbal.urdf.xacro  rm_gimbal_example.urdf.xacro
src/rm_left_auto_aim/auto_aim_interfaces/: CMakeLists.txt
src/rm_left_auto_aim/left_armor_detector/: CMakeLists.txt  package.xml
src/rm_left_auto_aim/left_armor_detector/include/armor_detector/: armor.hpp  detector.hpp  detector_node.hpp  number_classifier.hpp  pnp_solver.hpp
src/rm_left_auto_aim/left_armor_detector/src/: detector.cpp  detector_node.cpp  number_classifier.cpp  pnp_solver.cpp
src/rm_left_auto_aim/left_armor_tracker/: CMakeLists.txt  package.xml
src/rm_left_auto_aim/rm_left_auto_aim/: CMakeLists.txt  package.xml
src/rm_right_auto_aim/right_armor_detector/: CMakeLists.txt  package.xml
src/rm_right_auto_aim/right_armor_tracker/: CMakeLists.txt  package.xml
src/rm_serial_driver/src/: rm_serial_driver.cpp
src/rm_vision/: README.md
src/ros2-back-mindvision-camera/: CMakeLists.txt  package.xml
src/ros2-back-mindvision-camera/config/: camera_info.yaml  camera_params.yaml
src/ros2-back-mindvision-camera/launch/: back_mv_launch.py
src/ros2-back-mindvision-camera/src/: mv_camera_node.cpp
src/ros2-front-mindvision-camera/: CMakeLists.txt  package.xml
src/ros2-front-mindvision-camera/config/: camera_info.yaml  camera_params.yaml
src/ros2-front-mindvision-camera/launch/: front_mv_launch.py
src/ros2-front-mindvision-camera/src/: mv_camera_node.cpp
src/ros2-hik-camera-main/config/: camera_info.yaml  (+2 more)
src/rune/: .gitignore  package.xml  requirements.txt  setup.cfg  setup.py
(+505 files in other folders)
